Updated settings page to handle login/logout better

--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -551,6 +551,9 @@
   <ItemGroup>
     <Folder Include="Pages\Models\FlightLog\" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\profile200.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>call "$(ProjectDir)configuration.bat" "$(ProjectDir)" "$(ConfigurationName)"
