--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Pages\WorldMap.xaml.cs">
       <DependentUpon>WorldMap.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Tools\AssemblyVersionExtension.cs" />
     <Compile Include="Tools\ColorExtensions.cs" />
     <Compile Include="Tools\DateTimeExtensions.cs" />
     <Compile Include="Tools\EnumExtensions.cs" />
@@ -238,12 +239,16 @@
     <Compile Include="Tools\VisibilityAnimation.cs" />
     <Compile Include="Tools\WindowExtensions.cs" />
     <Compile Include="UserSessionService.cs" />
+    <Compile Include="Views\AutoUpdate.xaml.cs">
+      <DependentUpon>AutoUpdate.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\LoginNotification.xaml.cs">
       <DependentUpon>LoginNotification.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Main.xaml.cs">
       <DependentUpon>Main.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\Models\AutoUpdateViewModel.cs" />
     <Compile Include="Views\Models\NavMenuItem.cs" />
     <Compile Include="Views\Models\LoginNotificationViewModel.cs" />
     <Compile Include="Views\Models\MainViewModel.cs" />
@@ -324,6 +329,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Themes\VectorGraphics.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\AutoUpdate.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -437,6 +446,9 @@
     </PackageReference>
     <PackageReference Include="JetBrains.Annotations">
       <Version>2021.3.0</Version>
+    </PackageReference>
+    <PackageReference Include="MdXaml">
+      <Version>1.12.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers">
       <Version>6.0.0</Version>
