--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -142,8 +142,6 @@
     <Compile Include="Converters\UtcTimeStampConverter.cs" />
     <Compile Include="Converters\SettingsUnitConverter.cs" />
     <Compile Include="Converters\VisibilityInverterConverter.cs" />
-    <Compile Include="Models\AirportClientPackageRunwayEndEntry.cs" />
-    <Compile Include="Models\AirportClientPackageRunwayEntry.cs" />
     <Compile Include="Pages\AircraftTypes.xaml.cs">
       <DependentUpon>AircraftTypes.xaml</DependentUpon>
     </Compile>
@@ -156,8 +154,6 @@
     <Compile Include="Tools\ColorExtensions.cs" />
     <Compile Include="Tools\DateTimeExtensions.cs" />
     <Compile Include="Tools\EnumExtensions.cs" />
-    <Compile Include="Models\AirportClientPackageEntry.cs" />
-    <Compile Include="Models\AirportClientPackageRoot.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\Aircraft.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\Flight.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\FlightLog.cs" />
@@ -449,7 +445,7 @@
       <Version>1.3.3</Version>
     </PackageReference>
     <PackageReference Include="DataGridExtensions">
-      <Version>2.5.12</Version>
+      <Version>2.5.13</Version>
     </PackageReference>
     <PackageReference Include="Hardcodet.NotifyIcon.Wpf">
       <Version>1.1.0</Version>
@@ -483,32 +479,35 @@
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
     </PackageReference>
+    <PackageReference Include="OpenSky.AirportsJSON">
+      <Version>0.1.0</Version>
+    </PackageReference>
     <PackageReference Include="OpenSky.FlightLogXML">
       <Version>0.1.4</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfChart.WPF">
-      <Version>19.3.0.55</Version>
+      <Version>19.3.0.56</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfInput.WPF">
-      <Version>19.3.0.55</Version>
+      <Version>19.3.0.56</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfSkinManager.Wpf">
-      <Version>19.3.0.55</Version>
+      <Version>19.3.0.56</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Shared.WPF">
-      <Version>19.3.0.55</Version>
+      <Version>19.3.0.56</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Themes.MaterialDark.WPF">
-      <Version>19.3.0.55</Version>
+      <Version>19.3.0.56</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Tools.WPF">
-      <Version>19.3.0.55</Version>
+      <Version>19.3.0.56</Version>
     </PackageReference>
     <PackageReference Include="System.Data.SQLite">
       <Version>1.0.115.5</Version>
     </PackageReference>
     <PackageReference Include="TomsToolbox.Wpf">
-      <Version>2.7.3</Version>
+      <Version>2.7.4</Version>
     </PackageReference>
     <PackageReference Include="XDMessaging.Lite">
       <Version>5.0.6</Version>
