--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -510,6 +510,9 @@
     <PackageReference Include="System.Data.SQLite">
       <Version>1.0.115.5</Version>
     </PackageReference>
+    <PackageReference Include="System.Linq.Dynamic.Core">
+      <Version>1.2.14</Version>
+    </PackageReference>
     <PackageReference Include="TomsToolbox.Wpf">
       <Version>2.7.4</Version>
     </PackageReference>
