Lot's of UI changes
Flight log displays payload info from XML
Flight plan shows trail with animation between origin and destination
Flight plans overview shows payloads subgrid
Job market shows ideal for category plus distances for payloads
My fleet shows loaded payloads subgrids

--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -136,6 +136,8 @@
     </Compile>
     <Compile Include="Converters\AircraftTypeEngineInfoConverter.cs" />
     <Compile Include="Converters\AircraftTypeForeignKeyConverter.cs" />
+    <Compile Include="Converters\CollectionEmptyVisibilityConverter.cs" />
+    <Compile Include="Converters\PayloadDistanceConverter.cs" />
     <Compile Include="Converters\BooleanVisibilityConverter.cs" />
     <Compile Include="Converters\DateTimeTimeoutConverter.cs" />
     <Compile Include="Converters\MapZoomLevelFontSizeConverter.cs" />
