Added distance unit setting and used it for jobs market page

--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Converters\UtcTimeStampConverter.cs" />
     <Compile Include="Converters\SettingsUnitConverter.cs" />
     <Compile Include="Converters\VisibilityInverterConverter.cs" />
+    <Compile Include="Models\Enums\DistanceUnit.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\Job.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\Payload.cs" />
     <Compile Include="Pages\AircraftTypes.xaml.cs">
