--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -107,6 +107,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Controls\Animations\MapPathAnimation.cs" />
+    <Compile Include="Controls\FilterWithPopupControl.xaml.cs">
+      <DependentUpon>FilterWithPopupControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\ListContainsValueCheckbox.xaml.cs">
       <DependentUpon>ListContainsValueCheckbox.xaml</DependentUpon>
     </Compile>
@@ -284,6 +287,10 @@
     <Compile Include="Views\Startup.xaml.cs">
       <DependentUpon>Startup.xaml</DependentUpon>
     </Compile>
+    <Page Include="Controls\FilterWithPopupControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\ListContainsValueCheckbox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
