--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -132,6 +132,9 @@
     <Compile Include="Controls\Models\MapViewViewModel.cs" />
     <Compile Include="Controls\Models\SimbriefWaypointMarker.cs" />
     <Compile Include="Controls\Models\TrackingEventMarker.cs" />
+    <Compile Include="Controls\OpenSkyNotification.xaml.cs">
+      <DependentUpon>OpenSkyNotification.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\OpenSkyPage.cs" />
     <Compile Include="Controls\OpenSkyWindow.cs" />
     <Compile Include="Controls\SkybucksCurrency.xaml.cs">
@@ -308,6 +311,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\MapView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\OpenSkyNotification.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -535,22 +542,25 @@
       <Version>0.2.0</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfChart.WPF">
-      <Version>19.4.0.38</Version>
+      <Version>19.4.0.41</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfInput.WPF">
-      <Version>19.4.0.38</Version>
+      <Version>19.4.0.41</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.SfProgressBar.WPF">
+      <Version>19.4.0.41</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfSkinManager.Wpf">
-      <Version>19.4.0.38</Version>
+      <Version>19.4.0.41</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Shared.WPF">
-      <Version>19.4.0.38</Version>
+      <Version>19.4.0.41</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Themes.MaterialDark.WPF">
-      <Version>19.4.0.38</Version>
+      <Version>19.4.0.41</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Tools.WPF">
-      <Version>19.4.0.38</Version>
+      <Version>19.4.0.41</Version>
     </PackageReference>
     <PackageReference Include="System.Data.SQLite">
       <Version>1.0.115.5</Version>
