--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -129,10 +129,15 @@
     </Compile>
     <Compile Include="Controls\Models\AircraftPosition.cs" />
     <Compile Include="Controls\Models\AircraftTrailLocation.cs" />
+    <Compile Include="Controls\Models\ErrorDetails.cs" />
     <Compile Include="Controls\Models\ExtendedMessageBoxImage.cs" />
+    <Compile Include="Controls\Models\ExtendedMessageBoxResult.cs" />
     <Compile Include="Controls\Models\MapViewViewModel.cs" />
     <Compile Include="Controls\Models\SimbriefWaypointMarker.cs" />
     <Compile Include="Controls\Models\TrackingEventMarker.cs" />
+    <Compile Include="Controls\OpenSkyMessageBox.xaml.cs">
+      <DependentUpon>OpenSkyMessageBox.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\OpenSkyNotification.xaml.cs">
       <DependentUpon>OpenSkyNotification.xaml</DependentUpon>
     </Compile>
@@ -312,6 +317,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Controls\MapView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\OpenSkyMessageBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
