--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -165,6 +165,7 @@
     <Compile Include="Converters\SettingsUnitConverter.cs" />
     <Compile Include="Converters\VisibilityInverterConverter.cs" />
     <Compile Include="Models\Enums\DistanceUnit.cs" />
+    <Compile Include="OpenAPIs\ModelExtensions\Airport.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\Job.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\Payload.cs" />
     <Compile Include="Pages\AircraftTypes.xaml.cs">
