--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -166,8 +166,10 @@
     <Compile Include="Converters\VisibilityInverterConverter.cs" />
     <Compile Include="Models\Enums\DistanceUnit.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\Airport.cs" />
+    <Compile Include="OpenAPIs\ModelExtensions\GroundOperations.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\Job.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\Payload.cs" />
+    <Compile Include="OpenAPIs\ModelExtensions\RunwaySurface.cs" />
     <Compile Include="Pages\AircraftTypes.xaml.cs">
       <DependentUpon>AircraftTypes.xaml</DependentUpon>
     </Compile>
@@ -553,25 +555,25 @@
       <Version>0.2.0</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfChart.WPF">
-      <Version>19.4.0.43</Version>
+      <Version>19.4.0.47</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfInput.WPF">
-      <Version>19.4.0.43</Version>
+      <Version>19.4.0.47</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfProgressBar.WPF">
-      <Version>19.4.0.43</Version>
+      <Version>19.4.0.47</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfSkinManager.Wpf">
-      <Version>19.4.0.43</Version>
+      <Version>19.4.0.47</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Shared.WPF">
-      <Version>19.4.0.43</Version>
+      <Version>19.4.0.47</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Themes.MaterialDark.WPF">
-      <Version>19.4.0.43</Version>
+      <Version>19.4.0.47</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Tools.WPF">
-      <Version>19.4.0.43</Version>
+      <Version>19.4.0.47</Version>
     </PackageReference>
     <PackageReference Include="System.Data.SQLite">
       <Version>1.0.115.5</Version>
