Improved certain aspects of the financial overview page after test flight

--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -167,6 +167,7 @@
     <Compile Include="Converters\ZeroToNullConverter.cs" />
     <Compile Include="Models\Enums\DistanceUnit.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\Airport.cs" />
+    <Compile Include="OpenAPIs\ModelExtensions\FinancialRecord.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\GroundOperations.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\Job.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\Payload.cs" />
