Added XP11 support where necessary
Adding extra simulator columns where made sense
Added filtering of aircraft reg prefixes, so users don't see them
Tested through the various pages to spot any missing references/problems

Next: World map still needs sim filter, and create a "Default Sim" setting, that can be left empty for all sims

--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Controls\SkybucksCurrency.xaml.cs">
       <DependentUpon>SkybucksCurrency.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converters\AircraftRegistryConverter.cs" />
     <Compile Include="Converters\AircraftTypeEngineInfoConverter.cs" />
     <Compile Include="Converters\AircraftTypeForeignKeyConverter.cs" />
     <Compile Include="Converters\CollectionEmptyVisibilityConverter.cs" />
@@ -198,6 +199,7 @@
     <Compile Include="Pages\WorldMap.xaml.cs">
       <DependentUpon>WorldMap.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Tools\AircraftRegistryExtensions.cs" />
     <Compile Include="Tools\AssemblyVersionExtension.cs" />
     <Compile Include="Tools\ColorExtensions.cs" />
     <Compile Include="Tools\DateTimeExtensions.cs" />
