Added support for short job

--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Converters\AircraftTypeEngineInfoConverter.cs" />
     <Compile Include="Converters\AircraftTypeForeignKeyConverter.cs" />
     <Compile Include="Converters\CollectionEmptyVisibilityConverter.cs" />
+    <Compile Include="Converters\JobTypeConverter.cs" />
     <Compile Include="Converters\PayloadDistanceConverter.cs" />
     <Compile Include="Converters\BooleanVisibilityConverter.cs" />
     <Compile Include="Converters\DateTimeTimeoutConverter.cs" />
