--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -106,6 +106,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Controls\AircraftTypeDetails.xaml.cs">
+      <DependentUpon>AircraftTypeDetails.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Animations\MapPathAnimation.cs" />
     <Compile Include="Controls\MinMaxDoubleFilterWithPopupControl.xaml.cs">
       <DependentUpon>MinMaxDoubleFilterWithPopupControl.xaml</DependentUpon>
@@ -129,6 +132,7 @@
     </Compile>
     <Compile Include="Controls\Models\AircraftPosition.cs" />
     <Compile Include="Controls\Models\AircraftTrailLocation.cs" />
+    <Compile Include="Controls\Models\AircraftTypeDetailsViewModel.cs" />
     <Compile Include="Controls\Models\ErrorDetails.cs" />
     <Compile Include="Controls\Models\ExtendedMessageBoxImage.cs" />
     <Compile Include="Controls\Models\ExtendedMessageBoxResult.cs" />
@@ -192,10 +196,14 @@
     <Compile Include="Pages\Models\FlightPlanViewModel.SimBrief.cs" />
     <Compile Include="Pages\Models\JobMarketViewModel.cs" />
     <Compile Include="Pages\Models\MyJobsViewModel.cs" />
+    <Compile Include="Pages\Models\NewAircraftViewModel.cs" />
     <Compile Include="Pages\Models\WelcomeViewModel.cs" />
     <Compile Include="Pages\Models\WorldMapViewModel.cs" />
     <Compile Include="Pages\MyJobs.xaml.cs">
       <DependentUpon>MyJobs.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\NewAircraft.xaml.cs">
+      <DependentUpon>NewAircraft.xaml</DependentUpon>
     </Compile>
     <Compile Include="Pages\WorldMap.xaml.cs">
       <DependentUpon>WorldMap.xaml</DependentUpon>
@@ -313,6 +321,10 @@
     <Compile Include="Views\Startup.xaml.cs">
       <DependentUpon>Startup.xaml</DependentUpon>
     </Compile>
+    <Page Include="Controls\AircraftTypeDetails.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\MinMaxDoubleFilterWithPopupControl.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -394,6 +406,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\MyJobs.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\NewAircraft.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -667,7 +683,9 @@
   <ItemGroup>
     <Resource Include="Resources\map16.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\newaircraft16.png" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\profile200.png" />
   </ItemGroup>
@@ -683,6 +701,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\market16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\aircraftTypePlaceholder.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
