--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Converters\VisibilityInverterConverter.cs" />
     <Compile Include="Converters\ZeroToNullConverter.cs" />
     <Compile Include="Models\Enums\DistanceUnit.cs" />
+    <Compile Include="OpenAPIs\ModelExtensions\AircraftManufacturer.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\Airport.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\FinancialRecord.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\GroundOperations.cs" />
