--- a/OpenSky.Client/Properties/Settings.settings
+++ b/OpenSky.Client/Properties/Settings.settings
@@ -47,5 +47,8 @@
     <Setting Name="DefaultSimulator" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">-1</Value>
     </Setting>
+    <Setting Name="ShortDistanceUnit" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
