--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Converters\CollectionEmptyVisibilityConverter.cs" />
     <Compile Include="Converters\FrequencyConverter.cs" />
     <Compile Include="Converters\JobTypeConverter.cs" />
+    <Compile Include="Converters\LargeNumberConverter.cs" />
     <Compile Include="Converters\PayloadDistanceConverter.cs" />
     <Compile Include="Converters\BooleanVisibilityConverter.cs" />
     <Compile Include="Converters\DateTimeTimeoutConverter.cs" />
