Fixed keyboard navigation for flight plan ICAO auto suggest boxes
Also auto uppercase on lost focus

--- a/.editorconfig
+++ b/.editorconfig
@@ -18,7 +18,7 @@ insert_final_newline = false
 
 # Organize usings
 dotnet_separate_import_directive_groups = true
-file_header_template = --------------------------------------------------------------------------------------------------------------------\n<copyright file="{fileName}" company="OpenSky">\nOpenSky project 2021-2023\n</copyright>\n--------------------------------------------------------------------------------------------------------------------
+file_header_template = --------------------------------------------------------------------------------------------------------------------\n<copyright file="${File.FileName}" company="OpenSky">\nOpenSky project 2021-${CurrentDate.Year}\n</copyright>\n--------------------------------------------------------------------------------------------------------------------
 
 # this. and Me. preferences
 dotnet_style_qualification_for_event = true:suggestion
