Aircraft position update for my fleet
Added osm watermark to map
Aircraft position IsSelected support added
Removed bing maps key from settings

--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -749,6 +749,9 @@
   <ItemGroup>
     <Resource Include="Resources\notification16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\osm25.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>copy "$(SolutionDir)changelog.txt" "$(ProjectDir)\bin\$(ConfigurationName)\"
